Bug 15716 - Failure seen with smb2.charset testsuite for ceph and glusterfs vfs modules
Summary: Failure seen with smb2.charset testsuite for ceph and glusterfs vfs modules
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: 4.21.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Anoop C S
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-17 18:51 UTC by Anoop C S
Modified: 2025-04-01 09:35 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anoop C S 2024-09-17 18:51:04 UTC
Following failure is seen with either vfs_ceph or vfs_glusterfs modules loaded from 'vfs objects' list.

test: samba3.smb2.charset.Testing wide-a
time: 2024-09-17 03:01:45.227688Z
time: 2024-09-17 03:01:45.344728Z
failure: samba3.smb2.charset.Testing wide-a [
Exception: ../../source4/torture/smb2/charset.c:214: status was NT_STATUS_OK, expected NT_STATUS_OBJECT_NAME_COLLISION: Failed to create wide-A

]

Additional notes:
The specific test used to pass all this while until the following commit got merged.
# git bisect good
deeca8ff176e7e9082cc0fcf48d7f981de2523c5 is the first bad commit
commit deeca8ff176e7e9082cc0fcf48d7f981de2523c5
Author: Ralph Boehme <slow@samba.org>
Date:   Thu Jun 6 15:38:16 2024 +0200

    smbd: consolidate fs capabilities code in vfswrap_fs_capabilities()
    
    This ensures the values we return via SMB_FS_ATTRIBUTE_INFORMATION is the same
    we use internally via conn->fs_capabilities.
    
    This deliberately preserves existing behaviour as much as possible and leaves
    possible improvements as a future excercize. Particularily FILE_VOLUME_QUOTAS is
    already set insided SMB_VFS_STATVFS() depending on backend filesystem flags
    which is probably the correct way to do it instead of just setting the
    capability when Samba was built with quota support.
    
    Signed-off-by: Ralph Boehme <slow@samba.org>
    Reviewed-by: David Disseldorp <ddiss@samba.org>
Comment 1 Samba QA Contact 2024-10-07 13:37:04 UTC
This bug was referenced in samba master:

b1fbaefc665a7fb0413a26bd0304f97356fda414
9bced4429e90ba871b848f31738aa8614bf03b08
0d922d06a71ad647791cd93194c5591033fc4b4b
44e4e1eade5cadea9bd93fde8293ab6eb26230cc
58cf7a63209b0a898bc39c9f8b7de5188bef618f
9524b402f811fd2fc35c9952df0496898f8e2cbe
3c6ca81aad16e74bc3d9c4784baf97a237f652c6
Comment 2 Anoop C S 2024-10-09 16:55:51 UTC
It was a misunderstanding from my side that this regression was present with 4.21 which doesn't seem to be the case. Therefore closing out the bug report.